change action names in account
